syntax = "proto3";

package ai.lzy.v1.common;

option java_outer_classname = "LME";
option java_package = "ai.lzy.v1.common";

message EnvSpec {
  /* optional */ string docker_image = 3;
  /* optional */ map<string, string> env = 4;

  oneof execution_context {
    PythonEnv pyenv = 5;
    ProcessEnv process_env = 6;
  }
}

message PythonEnv {
  string name = 1;
  string yaml = 2;
  repeated LocalModule local_modules = 3;
}

message ProcessEnv {}

message LocalModule {
  string name = 1;
  // todo: ssokolvyak -- rename to url
  string uri = 2;
}

message Provisioning {
  message Tag {
    string tag = 1;
  }
  repeated Tag tags = 1;
}
